--- a/xrefmap.yml
+++ b/xrefmap.yml
@@ -23896,6 +23896,141 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestCthunSpawn.RewardFlavour
   nameWithType: QuestCthunSpawn.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead
+  name: QuestElfDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html
+  commentId: T:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead
+  nameWithType: QuestElfDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.#ctor
+  name: QuestElfDead()
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.#ctor
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.QuestElfDead()
+  nameWithType: QuestElfDead.QuestElfDead()
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.#ctor*
+  name: QuestElfDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.QuestElfDead
+  nameWithType: QuestElfDead.QuestElfDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription
+  nameWithType: QuestElfDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardDescription
+  nameWithType: QuestElfDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour
+  nameWithType: QuestElfDead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestElfDead_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestElfDead.RewardFlavour
+  nameWithType: QuestElfDead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead
+  name: QuestHordeDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html
+  commentId: T:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead
+  nameWithType: QuestHordeDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.#ctor
+  name: QuestHordeDead()
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.#ctor
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.QuestHordeDead()
+  nameWithType: QuestHordeDead.QuestHordeDead()
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.#ctor*
+  name: QuestHordeDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.QuestHordeDead
+  nameWithType: QuestHordeDead.QuestHordeDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription
+  nameWithType: QuestHordeDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardDescription
+  nameWithType: QuestHordeDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour
+  nameWithType: QuestHordeDead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestHordeDead_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestHordeDead.RewardFlavour
+  nameWithType: QuestHordeDead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead
+  name: QuestIllidariDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html
+  commentId: T:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead
+  nameWithType: QuestIllidariDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.#ctor
+  name: QuestIllidariDead()
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.#ctor
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.QuestIllidariDead()
+  nameWithType: QuestIllidariDead.QuestIllidariDead()
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.#ctor*
+  name: QuestIllidariDead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.QuestIllidariDead
+  nameWithType: QuestIllidariDead.QuestIllidariDead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription
+  nameWithType: QuestIllidariDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardDescription
+  nameWithType: QuestIllidariDead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour
+  nameWithType: QuestIllidariDead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestIllidariDead_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestIllidariDead.RewardFlavour
+  nameWithType: QuestIllidariDead.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawn
   name: QuestNazjatarSpawn
   href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestNazjatarSpawn.html
@@ -24012,6 +24147,51 @@ references:
   isSpec: "True"
   fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestOldGodPick.RewardFlavour
   nameWithType: QuestOldGodPick.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead
+  name: QuestSADead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html
+  commentId: T:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead
+  nameWithType: QuestSADead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.#ctor
+  name: QuestSADead()
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead__ctor
+  commentId: M:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.#ctor
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.QuestSADead()
+  nameWithType: QuestSADead.QuestSADead()
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.#ctor*
+  name: QuestSADead
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead__ctor_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.#ctor
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.QuestSADead
+  nameWithType: QuestSADead.QuestSADead
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead_RewardDescription
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription
+  nameWithType: QuestSADead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription*
+  name: RewardDescription
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead_RewardDescription_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardDescription
+  nameWithType: QuestSADead.RewardDescription
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead_RewardFlavour
+  commentId: P:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour
+  nameWithType: QuestSADead.RewardFlavour
+- uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour*
+  name: RewardFlavour
+  href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.html#WarcraftLegacies_Source_Quests_CrisisSpawn_QuestSADead_RewardFlavour_
+  commentId: Overload:WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour
+  isSpec: "True"
+  fullName: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestSADead.RewardFlavour
+  nameWithType: QuestSADead.RewardFlavour
 - uid: WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTwilightHammerSpawn
   name: QuestTwilightHammerSpawn
   href: api-source/WarcraftLegacies.Source.Quests.CrisisSpawn.QuestTwilightHammerSpawn.html
